--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "tymon/jwt-auth": "0.5.*",
-        "vluzrmos/lumen-cors": "2.1.*"
+        "barryvdh/laravel-cors": "0.7.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
