--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "tymon/jwt-auth": "0.5.*",
-        "barryvdh/laravel-cors": "0.7.*"
+        "barryvdh/laravel-cors": "0.7.*",
+        "wemersonjanuario/laravext": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
